# pi-widgets

./: .gitignore  Cargo.toml  README.md  deploy.sh  widgets.service
examples/: non_blocking.rs  record.rs  record_to_wav.rs
src/: button.rs  config.rs  fetch.rs  gpio.rs  led.rs  main.rs
widgets/: Cargo.toml  deploy.sh
widgets/src/: main.rs
