[package]
name = "widgets"
version = "0.2.0"
authors = ["William Myers <mwilliammyers@gmail.com>"]
edition = "2018"

[dependencies]
env_logger = "0.5.13"
envy = "0.3"
lazy_static = "1.1.0"
log = "0.4.0"
regex = "1.0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
gpio-cdev = "0.1.0"
nix = "0.11.0"
hyper = "0.12.13"
futures = "0.1.21"
